--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
        ,{bifrost, {git, "https://gitlab.com/arknode.io/bifrost.git", {branch, "develop"}}}]}.
 
 {shell, [
-  % {config, "config/sys.config"},
-    {apps, [myaddressbook]}
+   {config, "config/sys.config"},
+    {apps, [myaddressbook]},
+    {vm_args, "config/vm.args"}
 ]}.
