--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,5 @@
 
 {shell, [
    {config, "config/sys.config"},
-    {apps, [myaddressbook]},
-    {vm_args, "config/vm.args"}
+    {apps, [myaddressbook]}
 ]}.
